modificado o Collection.